remove add product overflow bug

--- a/css/editAnddetails.css
+++ b/css/editAnddetails.css
@@ -7,8 +7,8 @@ body {
   }
   
   .container {
-    width: 100vw;
-    height: 100vh;
+    /* width: 100vw; */
+    /* height: 100vh; */
     display: flex;
     align-items: center;
     justify-content: center;
